# Tracker.Tasks.Employees.FastAPI

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
migrations/: env.py
migrations/versions/: 06c404d1de76_.py
src/: app.py  main.py
src/auth/: db_user.py  manager.py  models.py  router.py  schemas.py
src/config/: __init__.py  config.py
src/core/: config.py
src/core/models/: __init__.py  base.py  db_helper.py  task.py  task_model.py  user_model.py
src/repositories/: __init__.py  db_helper.py
src/repositories/crud/: __init__.py  task.py  user.py
src/repositories/models/: __init__.py  task.py  user.py
src/routing/: task.py
src/schemas/: __init__.py  task.py
src/task/: __init__.py  crud.py  router.py  schemas.py
